# solar-log-ui

./: .gitignore  Cargo.toml  Session.vim  flake.nix  log.txt
src/: main.rs  state.rs
src/log/: file.rs  mod.rs
