[package]
name = "kostalui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
leptos = { version = "0.4.4", features = ["csr", "nightly"] }
leptos_chart = { version = "0.1.0", features = ["ScatterChart", "debug"] }
plotly = { version = "0.8.4", features = ["wasm"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_path_to_error = "0.1.14"
thiserror = "1.0.43"
